--- a/ChangeLog.org
+++ b/ChangeLog.org
@@ -2,6 +2,25 @@
 #+author: Valery Kocubinsky
 #+language: en
 
+* Version 0.4.0 <2024-03-26 Tue>
+
+- Switch from pandoc to Org Mode export
+- Split ntheory.clj into namespaces
+- Add basic/lcm function
+- Add modulo arithmetic
+  - m*
+  - m+
+  - m**
+- Add primes/order function
+- Add primes/composite? function
+- Add primes/prime? function
+- Add basic/divides? function  
+- Add congruence namespace
+  - linear congruence
+  - system of remainders
+  - chinese remainder theorem
+- Remove validation.clj
+
 * Version 0.3.0 <2024-03-11 Mon>
 
 - Factorize into different format
