--- a/ChangeLog.org
+++ b/ChangeLog.org
@@ -2,6 +2,12 @@
 #+author: Valery Kocubinsky
 #+language: en
 
+* Version 0.5.0
+
+- Update arithmetical functions documentation
+- Add congruence documentation
+  
+
 * Version 0.4.0 <2024-03-26 Tue>
 
 - Switch from pandoc to Org Mode export
